fix people page wrapping

--- a/src/css/people.css
+++ b/src/css/people.css
@@ -3,7 +3,7 @@
     margin: $tiny 0 4px 0;
   }
   h3 {
-    margin: 0;
+    margin: 0 0 $medium 0;
 
     @media (max-width: 980px) {
       margin-bottom: $medium;
